executable("client") {
  sources = [
    "client.cc",
  ]
  deps = [
      "//net:net",
      "//net:simple_quic_tools",
      "//base",
      "//build/config:exe_and_shlib_deps",
      "//build/win:default_exe_manifest",
      "//url",
  ]
}

executable("exitdemo") {
  sources = [
    "exitdemo.cc",
  ]
  deps=[
    "//base"
  ]
}

executable("server") {
  sources = [
    "server.cc",
  ]
  deps = [
      "//net:net",
      "//net:simple_quic_tools",
      "//base",
      "//build/config:exe_and_shlib_deps",
      "//build/win:default_exe_manifest",
      "//third_party/boringssl",
      "//third_party/protobuf:protobuf_lite",
  ]
}