# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.


# Works only on desktop platforms.
assert(is_win || is_linux || is_mac)

executable("battor_agent") {
  sources = [
    "battor_agent_bin.cc",
  ]
  deps = [
    ":battor_agent_lib",
    "//base",
    "//build/config:exe_and_shlib_deps",
    "//build/win:default_exe_manifest",
  ]
}

source_set("battor_agent_lib") {
  sources = [
    "battor_agent.cc",
    "battor_agent.h",
    "battor_connection.cc",
    "battor_connection.h",
    "battor_connection_impl.cc",
    "battor_connection_impl.h",
    "battor_error.cc",
    "battor_error.h",
    "battor_finder.cc",
    "battor_finder.h",
    "battor_sample_converter.cc",
    "battor_sample_converter.h",
    "serial_utils.cc",
    "serial_utils.h",
  ]
  deps = [
    "//base",
    "//device/serial",
    "//mojo/public/cpp/bindings",
    "//net",
  ]
}

